rename docker service in compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.5'
 services:
-  harmancc_mysql:
+  encoder_validator:
     image: registry.oskdev.de:5000/encoder-validator
     container_name: encoder-validator
     hostname: encoder-validator
