--- a/validation-config/memedia-hls-4k-h264-25fps.yaml
+++ b/validation-config/memedia-hls-4k-h264-25fps.yaml
@@ -1,8 +1,17 @@
 general:
+  format:
+    exact: mpeg-4
+  codecID:
+    or:
+      - contains: isom
   fileSize:
     and:
       - min: 50
       - max: 90
+  overallBitRate:
+    and:
+      - min: 20
+      - max: 25
 video:
   format:
     and:
@@ -30,18 +39,33 @@ video:
     exact: 3840
   height:
     exact: 2160
+  formatSettingsCABAC:
+    exact: "yes"
+  formatSettingsGOP:
+    or:
+      - contains: n=60
+  codecID:
+    or:
+      - exact: avc1
+  codecIDInfo:
+    or:
+      - exact: advanced video coding
+  displayAspectRatio:
+    exact: "16:9"
   frameRate:
-    and:
-      - min: 29.970
-      - max: 30
+    exact: 25
+  frameRateMode:
+    or:
+      - exact: variable
+      - exact: constant
   minimumFrameRate:
     and:
-      - min: 27
-      - max: 30
+      - min: 22
+      - max: 35
   maximumFrameRate:
     and:
-      - min: 30
-      - max: 33
+      - min: 25
+      - max: 28
   colorSpace:
     contains: yuv
   chromaSubsampling:
@@ -61,6 +85,9 @@ audio:
   format:
     and:
       - contains: aac
+  formatInfo:
+    or:
+      - exact: advanced audio codec
   formatProfile:
     or:
       - exact: lc
@@ -74,8 +101,12 @@ audio:
     and:
       - min: 44
       - max: 48.8
+  channelPositions:
+    exact: "front: l r"
   channelS:
     exact: 2
+  compressionMode:
+    exact: lossy
   bitRate:
     and:
       - min: 192
@@ -83,8 +114,8 @@ audio:
 # Frames is a special solution with it's own rules
 frames:
   keyFrameDistance:
-    min: 59
-    max: 60
+    min: 50
+    max: 50
   dtsPtsDiff: 1
   dtsPtsStartMax: 2
   frameOrder: IBBBP
