--- a/docker/config/app.conf
+++ b/docker/config/app.conf
@@ -6,11 +6,17 @@
   Alias "/videos" "/videos"
 
  <Directory /var/www/app>
+    AuthType Basic
+    AuthName "Please validate"
+    AuthUserFile "/htpasswd/.htpasswd"
+    Require valid-user
+
     Options FollowSymLinks
     AllowOverride None
     AddDefaultCharset utf-8
     DirectoryIndex index.php
-    Require all granted
+    Order allow,deny
+    Allow from all
     <IfModule mod_rewrite.c>
         RewriteEngine On
 
@@ -29,6 +35,12 @@
   </Directory>
 
   <Directory /videos>
+    AuthType Basic
+    AuthName "Please validate"
+    AuthUserFile "/htpasswd/.htpasswd"
+    Require valid-user
 
+    Order allow,deny
+    Allow from all
   </Directory>
 </VirtualHost>
