SRT listener fixed as well

--- a/docker/config/nginx.conf
+++ b/docker/config/nginx.conf
@@ -16,7 +16,7 @@ rtmp {
             live on;
             record off;
             
-            exec /usr/local/bin/ffmpeg -re -i rtmp://localhost:2935/$app/$name -vcodec copy -acodec copy -f flv /tmp/test.flv;
+            exec php /var/www/app/rtmp-start.php;
         }
     }
 }
@@ -34,6 +34,10 @@ http {
             include         fastcgi_params;
             fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
             fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
+        }
+
+        location /videos/ {
+            alias /videos/;
         }
     }
 }
